# MNB

./: CMakeLists.txt  README.md
examples/: example_integration_nonlinear.cpp  example_ode_interpolation.cpp
include/: approximation.h  integration.h  interpolation.h  linear_systems.h  nonlinear.h  numlib.h  ode.h
src/: approximation.cpp  integration.cpp  interpolation.cpp  linear_systems.cpp  nonlinear.cpp  ode.cpp
tests/: test_approximation.cpp  test_integration.cpp  test_interpolation.cpp  test_linear.cpp  test_nonlinear.cpp  test_ode.cpp
